--- a/norton.html
+++ b/norton.html
@@ -934,7 +934,7 @@ body{
             <div class='modlapopup'>
                 <h2 class='text-center wlcmint'>Welcome to Norton</h2>
                 <p class='parasdft'>To check out product designed specifically for your country, please visit site</p>
-                <p class='text-center msdrtlina'><a class='btnlinkg' href='http://nagsha4.dreamhosters.com/norton/'>Visit the US site</a><a class='btnlinkg1' href='http://nagsha4.dreamhosters.com/norton/'>Go to CA site</a></p>
+                <p class='text-center msdrtlina'><a class='btnlinkg' href='https://orchid-monkey-139310.hostingersite.com/MY/'>Visit the US site</a><a class='btnlinkg1' href='https://orchid-monkey-139310.hostingersite.com/MY/'>Go to CA site</a></p>
             </div>
         </a>
 
@@ -1010,4 +1010,5 @@ body{
         </div> 
 </body>
 </html>
+
 
